--- a/MainForm.fmx
+++ b/MainForm.fmx
@@ -7,28 +7,14 @@ object FormMain: TFormMain
   FormFactor.Width = 320
   FormFactor.Height = 480
   FormFactor.Devices = [Desktop]
+  OnCreate = FormCreate
   DesignerMasterStyle = 0
   object BCurl: TButton
-    Position.X = 80.000000000000000000
-    Position.Y = 104.000000000000000000
+    Position.X = 24.000000000000000000
+    Position.Y = 16.000000000000000000
     TabOrder = 0
     Text = 'Curl'
     OnClick = BCurlClick
-  end
-  object Label1: TLabel
-    Position.X = 80.000000000000000000
-    Position.Y = 56.000000000000000000
-    Text = 'Label1'
-    TabOrder = 2
-  end
-  object Edit1: TEdit
-    Touch.InteractiveGestures = [LongTap, DoubleTap]
-    TabOrder = 3
-    Position.X = 80.000000000000000000
-    Position.Y = 72.000000000000000000
-    Size.Width = 457.000000000000000000
-    Size.Height = 22.000000000000000000
-    Size.PlatformDefault = False
   end
   object Memo1: TMemo
     Touch.InteractiveGestures = [Pan, LongTap, DoubleTap]
@@ -37,40 +23,56 @@ object FormMain: TFormMain
     TextSettings.Font.Family = 'Courier New'
     Anchors = [akLeft, akTop, akRight, akBottom]
     Position.X = 16.000000000000000000
-    Position.Y = 192.000000000000000000
+    Position.Y = 88.000000000000000000
     Size.Width = 676.000000000000000000
-    Size.Height = 321.000000000000000000
+    Size.Height = 425.000000000000000000
     Size.PlatformDefault = False
-    TabOrder = 4
+    TabOrder = 2
     Viewport.Width = 672.000000000000000000
-    Viewport.Height = 317.000000000000000000
+    Viewport.Height = 421.000000000000000000
   end
   object BGenerate: TButton
-    Position.X = 176.000000000000000000
-    Position.Y = 104.000000000000000000
-    TabOrder = 5
+    Position.X = 120.000000000000000000
+    Position.Y = 16.000000000000000000
+    TabOrder = 3
     Text = 'Generate keys'
     OnClick = BGenerateClick
   end
   object BCheckin: TButton
-    Position.X = 280.000000000000000000
-    Position.Y = 104.000000000000000000
-    TabOrder = 6
+    Position.X = 224.000000000000000000
+    Position.Y = 16.000000000000000000
+    TabOrder = 4
     Text = 'Checkin'
     OnClick = BCheckinClick
   end
   object BRegister: TButton
-    Position.X = 376.000000000000000000
-    Position.Y = 104.000000000000000000
-    TabOrder = 7
+    Position.X = 320.000000000000000000
+    Position.Y = 16.000000000000000000
+    TabOrder = 5
     Text = 'Register'
     OnClick = BRegisterClick
   end
   object BQR: TButton
-    Position.X = 376.000000000000000000
-    Position.Y = 136.000000000000000000
-    TabOrder = 9
+    Position.X = 320.000000000000000000
+    Position.Y = 48.000000000000000000
+    TabOrder = 7
     Text = 'QR'
     OnClick = BQRClick
+  end
+  object BInit: TButton
+    Position.X = 120.000000000000000000
+    Position.Y = 48.000000000000000000
+    Size.Width = 185.000000000000000000
+    Size.Height = 22.000000000000000000
+    Size.PlatformDefault = False
+    TabOrder = 8
+    Text = 'Init client'
+    OnClick = BInitClick
+  end
+  object Button1: TButton
+    Position.X = 472.000000000000000000
+    Position.Y = 48.000000000000000000
+    TabOrder = 9
+    Text = 'Button1'
   end
 end
